# CharacterFaceFeedback

./: .gitignore  AlternatingSubspaceSearch.md  README.md  prompt.md  prompt2.md  prompt_concept.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: sessions.py
backend/app/core/: config.py
backend/app/schemas/: session.py
backend/app/services/: bo.py  store.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/aggregation-dashboard/: page.tsx
frontend/app/constructive-suggestions/: page.tsx
frontend/app/evaluate/: page.tsx
frontend/app/intuitive-implicit/: page.tsx
frontend/app/structured-visual-annotation/: page.tsx
