[project]
name = "feedback-art-backend"
version = "0.1.0"
description = "Backend foundation for Character Illustration Diagnostic & Reflection System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic-settings>=2.10.0",
  "numpy>=2.0.0",
  "scikit-learn>=1.6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "httpx>=0.28.0",
  "ruff>=0.12.0"
]

[tool.uv]
package = false
